# Distributed-System

./: CMakeLists.txt  Makefile
.github/workflows/: ci.yml
src/: client  client.cpp  client.h  client1  client1.cpp  greeter.proto  mainClient.cpp  mainServer.cpp  server  server.cpp  server.h  server1  server1.cpp  service.proto
src/clientFile/: 1.txt
src/protoSrc/: greeter.grpc.pb.h  greeter.pb.cc  greeter.pb.h  service.grpc.pb.cc  service.grpc.pb.h  service.pb.cc  service.pb.h
src/utils/: clienthelper.cpp  clienthelper.h  serverhelper.cpp  serverhelper.h
tests/: test1.cpp
